style.css
  html, body {
    display: inline-block;
    height: 100vh;
    width: 100vw;
    margin: 0;
    padding: 0;
    background-color: lightblue;
  }

  .container1{
    height: 100%;
    width: 67%;
    padding: 0;
    margin: 0;
    display: inline-block;
    float: left;
    position: relative;

  }

  #map {
    height: 80%;
    margin-top: 80px;
  }

  .search{
    display: inline-block;

  }

  .container2{
    font-size: 40px;
    height: 100%;
    width: 33%;
    margin-top: 1%;
    margin-left: 0%;
    display: inline-block;
    float: right;
    color:lightpink;
    font-family: cursive,sans-serif;
    position: absolute;

  }
  .flickr{
    height: 20%;
    width:100%;
  } 
  .weather{
    /* background-color: lightgrey; */
    height: 40%;
    width:100%;
  }

  .yelp{
    background-color: blue;
    height: 100vh;
    overflow-y: scroll;
    width:100%;
  }

  #templates{
    display: none;
  }
  .businessContainer{
    border-bottom: 1px solid black;
    height: 25vh;
    width: 100%;
    background-color: white;
    font-size: 1rem;
  }
  .businessContainer .name{
    font-weight: bold;
    font-size: 120%;
    color: yellow;
  }
  .businessContainer:nth-child(even){
    background-color: lightgrey;
  }
  .businessContainer .priceRatingContainer{
    display: flex;
  }
  .priceRatingContainer > *{
    width: 100%;
    text-align: center;
  }
  .businessContainer .locationInfo{
    font-weight: bold;
  }
  .imageContainer{
    height: 10vmin;
    width: 10vmin;
    background-size: 100% 100%;
    float: left;
  }


 
    

